# vps-config

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
ansible/: ansible.cfg
ansible/group_vars/: all.yml
ansible/inventories/: hosts.yml  production.yml  test.yml
ansible/playbooks/: site.yml
ansible/roles/authelia/defaults/: main.yml
ansible/roles/authelia/handlers/: main.yml
ansible/roles/authelia/tasks/: main.yml
ansible/roles/authelia/templates/: .env.j2  configuration.yml.j2  docker-compose.yml.j2  users_database.yml.j2
ansible/roles/caddy/handlers/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: Caddyfile.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/keycloak/tasks/: main.yml
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/monitoring/templates/: datasources.yml.j2  docker-overview.json.j2  logs-overview.json.j2  loki.yml.j2  prometheus.yml.j2  promtail.yml.j2  system-overview.json.j2
ansible/roles/personal-website/tasks/: main.yml
docker/compose/: monitoring.yml
docker/test-environment/: Dockerfile  docker-compose.yml
docs/: architecture.md  commands.md  configuration.md  customization.md  deployment.md  development.md  installation.md  management.md  projects.md  quick-start.md  security.md  services.md  troubleshooting.md
scripts/: __init__.py  test-local.sh  test_local.py  validate.py  validate.sh
scripts/deployment/: deploy.py  deploy.sh
scripts/utilities/: __init__.py  health-check.sh  health_check.py
(+4 files in other folders)
